2004-02-20  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py: Corrections.
	* src/EditSource.py: Use parent class. Use windows menu.
	* src/ImageSelect.py: Corrections.
	* src/Sources.py: Corrections.
	* src/gramps.glade: Add handlers.
	* src/NoteEdit.py: Corrections. 
	* src/dialog.glade: Add handler. 
	* src/Witness.py: Corrections. 
	* src/RelLib.py: Include witnesses in comparing events. 
	* src/FamilyView.py: Pass parent on to child classes.
	* src/AddSpouse.py: Pass parent on to EditPerson.
	* src/ChooseParents.py: Pass parent on to EditPerson.
	* src/gramps_main.py: Pass Gramps class to child classes.
	* src/MergeData.py: Pass parent on to EditPerson.

2004-02-19  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py: Use parent class. Add/remove itself from/to
	the Windows menu.
	* src/NameEdit.py: Make non-modal. 
	* src/gramps.glade: Add Windows menu.
	* src/gramps_main.py: Get Windows menu and its submenu.
	Pass Gramps class to the children -- first-class object editors.
	* src/dialog.glade: Add handler. 
	* src/srcsel.glade: Add handlers.
	* src/Sources.py: Make SourceInfo non-modal, use Windows menu.
	* src/AttrEdit.py: Make non-modal, use Windows menu.
	* src/AddrEdit.py: Make non-modal, use Windows menu.
	* src/UrlEdit.py: Make non-modal, use Windows menu.
	* src/EventEdit.py: Properly add new event, add its id to the list.
	Make non-modal, use Windows menu.
	* src/NoteEdit.py: Make non-modal, use Windows menu.
	* src/ImageSelect.py: Make non-modal, use Windows menu.
	* src/imagesel.glade: Add handler. 

2004-02-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Relationship.py: Factor out relationship distance computation.
	* src/plugins/rel_ru.py: Use self.get_distance(). 
	* src/plugins/rel_de.py: Use self.get_distance(). 
	* configure.in, configure: Change version.
	* src/plugins/rel_hu.py: Convert to class.

2004-02-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Relationship.py: more fixes